--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -57,11 +57,11 @@
           <td id='diastolicbp'></td>
         </tr>
         <tr>
-          <th>LDL:</th>
+          <th>LDL ("Good" Cholesterol):</th>
           <td id='ldl'></td>
         </tr>
         <tr>
-          <th>HDL:</th>
+          <th>HDL ("Bad" Cholesterol):</th>
           <td id='hdl'></td>
         </tr>
       </table>
