--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'c5adead5-f9ff-465a-95e4-f12a460f32f5',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/AllergyIntolerance.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
