--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -65,6 +65,8 @@
           <td id='hdl'></td>
         </tr>
       </table>
+      <h2>AllergyIntolerance resource</h2>
+      <div id='AllergyIntolerance'>Coming to a screen near you soon!</div>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
