--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -66,7 +66,7 @@
         </tr>
       </table>
       <h2>AllergyIntolerance Resource</h2>
-      <div id='AllergyIntolerance'>Coming to a screen near you soon!</div>
+      <div id='AllergyIntolerance'>Coming to a screen near you soon...</div>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
